--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "marked": "^3.0.6",
-    "svelte-spa-router": "^3.0.4"
+    "svelte-spa-router": "^3.0.4",
+    "xss": "^1.0.10"
   }
 }
