--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "marked": "^3.0.6",
+    "marked": "^2.1.3",
+    "svelte-markdown": "^0.1.12",
     "svelte-spa-router": "^3.0.4",
     "xss": "^1.0.10"
   }
