--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "autoprefixer": "^10.3.7",
+    "postcss": "^8.3.9",
+    "postcss-load-config": "^3.1.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^4.9.8",
+    "tailwindcss": "^2.2.17"
   },
   "dependencies": {
+    "daisyui": "^1.14.5",
     "marked": "^2.1.3",
     "svelte-markdown": "^0.1.12",
     "svelte-spa-router": "^3.0.4",
