--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-preprocess": "^4.9.8",
+    "svelte-scrollto": "^0.2.0",
     "tailwindcss": "^2.2.17"
   },
   "dependencies": {
