--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
+    "svelte": "3.38.2",
     "svelte-preprocess": "^4.9.8",
     "svelte-scrollto": "^0.2.0",
     "tailwindcss": "^2.2.17"
@@ -26,6 +26,7 @@
     "daisyui": "^1.14.5",
     "marked": "^2.1.3",
     "svelte-markdown": "^0.1.12",
+    "svelte-meta": "^1.0.2",
     "svelte-spa-router": "^3.0.4",
     "xss": "^1.0.10"
   }
